--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-include("common/utilities.cmake")
-
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(Sample)
+project(ESPStickToy)
 
+set(EXTRA_COMPONENT_DIRS "common/components")
