Updated common submodule and fixed root level CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(ESPStickToy)
 
-set(EXTRA_COMPONENT_DIRS "common/components")
+include("common/utilities.cmake")
+set(EXTRA_COMPONENT_DIRS "${EXTRA_COMPONENT_DIRS} common/components")
+
+project(ESPStickToy)
